# splinter

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .sqlfluff  404.html  LICENSE  PLAN_CRM.md  README.md  index.html  lints.sql  mkdocs.yaml  package-lock.json  package.json  pyproject.toml  sitemap.xml  splinter.json  splinter.sql  tsconfig.json  vercel.json
0001_unindexed_foreign_keys/: index.html
0002_auth_users_exposed/: index.html
0003_auth_rls_initplan/: index.html
0004_no_primary_key/: index.html
0005_unused_index/: index.html
0006_multiple_permissive_policies/: index.html
0007_policy_exists_rls_disabled/: index.html
0008_rls_enabled_no_policy/: index.html
0009_duplicate_index/: index.html
0010_security_definer_view/: index.html
0011_function_search_path_mutable/: index.html
0013_rls_disabled_in_public/: index.html
0014_extension_in_public/: index.html
0015_rls_references_user_metadata/: index.html
0017_foreign_table_in_api/: index.html
dockerfiles/: Dockerfile  docker-compose.yml
docs/: 0001_unindexed_foreign_keys.md  0002_auth_users_exposed.md  0003_auth_rls_initplan.md  0004_no_primary_key.md  0005_unused_index.md  0006_multiple_permissive_policies.md  0007_policy_exists_rls_disabled.md  0008_rls_enabled_no_policy.md  0009_duplicate_index.md  0010_security_definer_view.md  0011_function_search_path_mutable.md  0012_auth_allow_anonymous_sign_ins.md  0013_rls_disabled_in_public.md  0014_extension_in_public.md  0015_rls_references_user_metadata.md  0016_materialized_view_in_api.md  0017_foreign_table_in_api.md  Segurituy_Goat  (+15 more)
(+174 files in other folders)
